--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
-    "name": "iexbase/tron-api",
+    "name": "carpedx/tron-api",
     "description": "A PHP API for interacting with Tron (Trx)",
     "license": "MIT",
     "type":   "library",
-    "homepage": "https://github.com/iexbase/tron-api",
+    "homepage": "https://github.com/carpedx/tron-api",
     "authors": [
         {
             "name": "Shamsudin Serderov",
@@ -11,7 +11,7 @@
         }
     ],
     "keywords": [
-        "iexbase",
+        "carpedx",
         "tron-lib",
         "tron-php",
         "tron-api",
@@ -34,13 +34,13 @@
     },
     "autoload": {
         "psr-4": {
-            "IEXBase\\TronAPI\\": "src"
+            "Carpedx\\TronAPI\\": "src"
         }
     },
 
     "autoload-dev": {
         "psr-4": {
-            "IEXBase\\TronAPI\\Test\\": "tests"
+            "Carpedx\\TronAPI\\Test\\": "tests"
         }
     },
 
